# MacroWise

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: defaults.conf
include/: Interface.hpp  MacroRecorder.hpp  UInputDevice.hpp  utils.hpp
src/: Interface.cpp  MacroRecorder.cpp  UInputDevice.cpp  main.cpp  utils.cpp
